style: fix-z-index

--- a/src/components/Modal/styles.scss
+++ b/src/components/Modal/styles.scss
@@ -26,7 +26,7 @@
 
 .rainbow-modal_backdrop--open {
     visibility: visible;
-    z-index: 90000;
+    z-index: 1000000;
     opacity: 1;
 }
 
@@ -92,7 +92,7 @@
     position: absolute;
     top: 0.5rem;
     right: 0.5rem;
-    z-index: 90002;
+    z-index: 1000002;
 }
 
 .rainbow-modal--open {
