--- a/src/components/PrimitiveMenu/styles.scss
+++ b/src/components/PrimitiveMenu/styles.scss
@@ -13,7 +13,7 @@
 
 .rainbow-primitive-menu_dropdown {
     position: absolute;
-    z-index: 7000;
+    z-index: 1000;
     left: 50%;
     float: left;
     min-width: 6rem;
